--- a/css/legit.css
+++ b/css/legit.css
@@ -89,8 +89,7 @@ hr
 
 #profile_img
 {
-    width: 11%;
-    height: 20%;
+   width: 15%;
 }
  
 .what_I_do_item{
@@ -98,6 +97,10 @@ hr
     font-family: 'Roboto', sans-serif;
     text-align: center;
     padding: 2em;
+}
+
+.skills {
+    margin-top: 4em;
 }
 
 .what_I_do_heading {
